--- a/css/css_selector.html
+++ b/css/css_selector.html
@@ -23,7 +23,7 @@ font-size: 200%;
  </style>
 </head>
 <body>
-<p id="">we use id selector </p>
+<p id="para">we use id selector </p>
 <h1 class="cd">class selector </h1>
 <h2 class="cd">class selesctor</h2>
 <p>element selector</p>
